Bug 109735 - [Regression] broken font with mesa_vulkan_overlay
Summary: [Regression] broken font with mesa_vulkan_overlay
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-22 00:39 UTC by oschowa
Modified: 2019-02-22 16:25 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
screenshot (2.78 MB, image/png)
2019-02-22 00:40 UTC, oschowa
Details
bisect log (2.39 KB, text/plain)
2019-02-22 00:41 UTC, oschowa
Details

Description oschowa 2019-02-22 00:39:23 UTC
The mesa_vulkan_overlay renders broken font with recent radv-git, 18.3.3 works fine (both build against LLVM 7.0.1). GPU is a RX580. Bisected to:

commit da2959463616756e89cece39f2bae1d437df4bbd
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Wed Jan 16 11:52:03 2019 -0600

    spirv: Only split blocks
    
    Instead of splitting every per-vertex struct, just split the ones that
    are actually blocks.  The reason for the split is so that we have
    separate variables for separate locations, qualifiers, and builtin
    decorations.  The vulkan spec only allows these on members of blocks.
    
    Reviewed-by: Alejandro Piñeiro <apinheiro@igalia.com>
Comment 1 oschowa 2019-02-22 00:40:08 UTC
Created attachment 143435 [details]
screenshot
Comment 2 oschowa 2019-02-22 00:41:11 UTC
Created attachment 143436 [details]
bisect log
Comment 3 Shmerl 2019-02-22 05:13:05 UTC
Yep, I can confirm it renders OK with radv 18.3.2 / llvm 7.0.1, but font is broken with radv in Mesa master / llvm 9.0
Comment 4 Bas Nieuwenhuizen 2019-02-22 16:25:43 UTC
Fixed with https://gitlab.freedesktop.org/mesa/mesa/merge_requests/294


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.