src/amd/vulkan/radv_nir_to_llvm.c
@@ -2297,17 +2297,16 @@ handle_fs_input_decl(struct radv_shader_context *ctx,
 
 	mask = ((1ull << attrib_count) - 1) << variable->data.location;
 
-	if (glsl_get_base_type(glsl_without_array(variable->type)) == GLSL_TYPE_FLOAT) {
-		unsigned interp_type;
-		if (variable->data.sample)
-			interp_type = INTERP_SAMPLE;
-		else if (variable->data.centroid)
-			interp_type = INTERP_CENTROID;
-		else
-			interp_type = INTERP_CENTER;
+	unsigned interp_type;
+	if (variable->data.sample)
+		interp_type = INTERP_SAMPLE;
+	else if (variable->data.centroid)
+		interp_type = INTERP_CENTROID;
+	else
+		interp_type = INTERP_CENTER;
 
-		interp = lookup_interp_param(&ctx->abi, variable->data.interpolation, interp_type);
-	}
+	interp = lookup_interp_param(&ctx->abi, variable->data.interpolation, interp_type);
+
 	if (interp == NULL)
 		interp = LLVMGetUndef(ctx->ac.i32);
 
